GNOME Bugzilla – Bug 795436
video: Safe guard info->finfo when mapping a frame
Last modified: 2018-04-21 23:48:29 UTC
Not sure how that slept through but that case is possible and leads to segfaults in any code path of the function right now.
Created attachment 371214 [details] [review] video: Safe guard info->finfo when mapping a frame
I think your patch is correct in catching dev error. It would mean one is passing an uninitialized GstVideoInfo.
Attachment 371214 [details] pushed as b63fc21 - video: Safe guard info->finfo when mapping a frame